--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <a href="./03.html">좌우버튼</a>
     <div id="igo">아이고</div>
     <p id="num">0</p>
     <button id="prev_btn">이전</button>
