--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <img src="./img/iPhone 12 Pro 6.png">
     <a href="./03.html">좌우버튼</a>
     <a href="./11_assignment.html">예티 그리기</a>
     <div id="igo">아이고</div>
